k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lottery
  labels:
    name: lottery
    app: lottery
